--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -37,20 +37,38 @@
       <div class="navbar-inner">
         <div class="container-narrow">
 			<a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <ul class="nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-          </ul>
+			<div class="nav-collapse collapse navbar-inverse-collapse">
+			  <ul class="nav">
+				{% assign pages_list = site.pages %}
+				{% assign group = 'navigation' %}
+				{% include JB/pages_list %}
+			  </ul>
+			  <form action="http://google.com/search" method="get" class="navbar-search pull-right">
+				  <fieldset role="search">
+					  <input type="hidden" name="q" value="site:smilgel.com">
+					  <input class="search-query span3" type="text" name="q" results="0" placeholder="Search">
+				  </fieldset>
+				  <fieldset class="mobile-nav visible-phone">
+					  <select>
+						  <option value="">Navigate…</option>
+						  <option value="/">» Blog</option>
+						  <option value="/archives">» Archives</option>
+						  <option value="/atom.xml">» RSS</option>
+					  </select>
+				  </fieldset>
+			  </form>
+			</div>
         </div>
       </div>
     </div>
 
     <div class="container-narrow">
-
-      <div class="content">
-        {{ content }}
-      </div>
+		<div class="row-fluid">
+		  <div class="content span9 pull-left">
+			{{ content }}
+		  </div>
+		  {% include JB/sidebar %}
+	    </div>
       <hr>
       <footer>
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
@@ -58,7 +76,6 @@
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
       </footer>
-
     </div>
 
     {% include JB/analytics %}
