增加分享插件

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -79,76 +79,18 @@ h1 {font-size: 1.9em;}
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
-.friends {
-  position: relative;}
-.friends span.title {
-  position: absolute;
-  top: -30px;
-  font-weight: bold;
-  left: 10px;
-  background: #fff;}
 
-ul.info li {
-  height: 40px;
-  line-height: 40px;}
+.friends {position: relative;}
+.friends span.title {position: absolute;top: -30px;font-weight: bold;left: 10px;background: #fff;}
 
-ul.info > li > a {
-  display: block;
-  height: 32px;
-  line-height: 32px;}
+ul.info li { height: 40px; line-height: 40px;} 
+ul.info>li>a {display: block;height: 32px;line-height: 32px;}
+ul.info>li>a>img {width: 32px;height: 32px;margin-right: 10px;}
 
-ul.info > li > a > img {
-  width: 32px;
-  height: 32px;
-  margin-right: 10px;}
-
-.article-block,
-.page-block {
-	position: relative;
-	margin-top: 3em;
-}
-.article-block:first-child,
-.page-block:first-child {
-	margin-top: 1em;
-}
-
-.article-block>h2.article-year,
-.page-block>h2.article-year{
-	position: absolute;
-	color: #c7c7c7;
-	font-size: 2.0em;
-	top: -1.1em;
-	left: 0.9em;
-	z-index: 9;
-	background: #fff;
-}
-
-.article-block>ul.article-list,
-.page-block>ul.page-list {
-	margin-left: 0em;
-}
-
-.article-block>ul.article-list>li,
-.page-block>ul.page-list>li {
-  position: relative;
-  border-top: 1px dashed #c7c7c7;
-  padding-left: 5em;
-  min-height: 4.5em;
-  line-height: 4.5em;
-} 
-
-.article-block>ul.article-list>li>span.post-date,
-.page-block>ul.page-list>li>span.post-date {
-	position: absolute;
-	font-size: 0.9em;
-	line-height: 3.0em;
-	text-transform: uppercase;
-	left: 0em;
-	top: 1.8em;
-}
-
-.article-block>ul.article-list>li>h3,
-.page-block>ul.page-list>li>a {
-  font-size: 1.1em;
-  font-weight: bold;
-}
+.article-block, .page-block { position: relative; margin-top: 3em; }
+.article-block:first-child, .page-block:first-child { margin-top: 1em; }
+.article-block>h2.article-year,.page-block>h2.article-year{ position: absolute; color: #c7c7c7; font-size: 2.0em; top: -1.1em; left: 0.9em; z-index: 9; background: #fff; }
+.article-block>ul.article-list,.page-block>ul.page-list { margin-left: 0em; }
+.article-block>ul.article-list>li, .page-block>ul.page-list>li { position: relative; border-top: 1px dashed #c7c7c7; padding-left: 5em; min-height: 4.5em; line-height: 4.5em; } 
+.article-block>ul.article-list>li>span.post-date,.page-block>ul.page-list>li>span.post-date { position: absolute;font-size: 0.9em;line-height: 3.0em;text-transform: uppercase;left: 0em;top: 1.8em; }
+.article-block>ul.article-list>li>h3, .page-block>ul.page-list>li>a { font-size: 1.1em; font-weight: bold; }
