--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} - MrSaxon's Blog</title>
+    <title>{{ page.title }} - Saxon's Blog</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
